tests: hreftourl tests